--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1332.0",
     "bootstrap": "^5.2.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -42,5 +46,8 @@
   },
   "devDependencies": {
     "sass": "^1.58.3"
+  },
+  "browser": {
+    "crypto": false
   }
 }
