--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1332.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
